Overflow fix ios mobile fix

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -79,8 +79,9 @@
 
 body {
   background-color: var(--grey-light);
-  min-height: 100vh;
   overflow-x: hidden;
+  min-height: 100vh;
+  width: 100vw;
 }
 
 h1 {
